[package]
name = "flight"
version = "1.0.0"
edition = "2021"

[dependencies]
bimap = "0.6.3"
common = { git = "https://github.com/gt-space/common", features = ["sequences"] }
crossterm = "0.27.0"
hostname = "0.4.0"
jeflog = "0.1.0"
postcard = { version = "1.0.8", features = ["alloc"] }
pyo3 = "0.20"
ratatui = "0.26.1"
sysinfo = "0.30.8"
netraffic = "0.1.0"

